[tool.poetry]
name = "local-horse-racing-crawler"
version = "2.2.0-dev"
description = "地方競馬データをクロールする"
authors = ["u6k <u6k.apps@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "local_horse_racing_crawler"}]

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.10.0"
boto3 = "^1.28.28"
joblib = "^1.3.2"
pandas = "^2.1.3"
poethepoet = "^0.22.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.autopep8]
max_line_length = 1000

[tool.flake8]
max-line-length = 1000

[tool.isort]
profile = "black"
line_length = 1000

[tool.poe.tasks]
lint = "pflake8 ./investment_local_horse_racing_crawler/ ./tests/"
fix = [{cmd="autopep8 -ivr ./investment_local_horse_racing_crawler/ ./tests/"}, {cmd="isort ./investment_local_horse_racing_crawler/ ./tests/"}]
test = {cmd="bin/scrapy_proxy.sh check local_horse_racing_spider -L DEBUG"}
crawl = {cmd="bin/scrapy_proxy.sh crawl local_horse_racing_spider"}
