[metadata]
name = investment_local_horse_racing_crawler
version = attr: investment_local_horse_racing_crawler.VERSION
url = https://github.com/u6k/investment-local-horse-racing-crawler
author = u6k
author_email = u6k.apps@gmail.com
description = Crawler for local horse racing
long_description = file: README.md
license = MIT License

[options]
packages = find:

[isort]
profile = black
line_length = 1000

[flake8]
max_line_length = 1000
